kubernetes/apps/flux-system/flux-instance/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 404"]
spec:
  hostnames:
    - flux-webhook.jonandlinz.io
  parentRefs:
    - name: envoy-external
      namespace: network

  rules:
    - matches:
        - path:
            type: RegularExpression
            value: "^/hook(/.*)?$"
      backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
